# clinical-ai-agent

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  cli.py  pyproject.toml
.github/workflows/: ci.yml
agent/: agent.py  prompts.py  safety.py  tools.py
docs/: aws-deployment.md  runbook.md
docs/plans/: 2026-03-20-clinical-ai-agent-design.md  2026-03-20-implementation-plan.md
mlops/: drift.py  monitor.py  registry.py  slo.py
model/: Dockerfile  evaluate.py  features.py  predict.py  train.py
models/: registry.json
perf/: benchmark.py
rag/: ingest.py  retriever.py
rag/data/snippets/: cardiomems_protocol.md  gdmt_recommendations.md  hf_risk_factors.md  nyha_classification.md
sre/: circuit_breaker.py
tests/: conftest.py
tests/integration/: test_model_api.py
tests/ml/: test_behavioral.py  test_data_validation.py  test_model_quality.py  test_rag_quality.py
tests/unit/: test_circuit_breaker.py  test_drift.py  test_monitor.py  test_rag_chunking.py  test_registry.py  test_retriever.py  test_safety.py  test_smoke.py
