[project]
name = "clinical-ai-agent"
version = "0.1.0"
description = "Clinical AI Agent for Heart Failure Risk Assessment"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Gayan Jayasundara"}]

dependencies = [
    # LLM & Agent
    "langchain>=0.3.0",
    "langchain-aws>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-huggingface>=0.1.0",

    # RAG
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "pypdf>=4.0.0",

    # ML Models
    "xgboost>=2.0.0",
    "torch>=2.0.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",

    # Model Serving
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",

    # Observability
    "structlog>=24.0.0",

    # CLI
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "bandit>=1.7.0",
    "locust>=2.28.0",
]

[project.scripts]
clinical-agent = "cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "ml: ML-specific tests (data validation, model quality, behavioral)",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "perf: Performance tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.setuptools.packages.find]
include = ["agent*", "model*", "rag*", "mlops*", "sre*", "perf*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
